# gamgee

./: .dir-locals.el  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  ChangeLog.md  Makefile  README.md  cabal.project  flake.nix  gamgee.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
app/Gamgee/Program/: CommandLine.hs  Effects.hs
dhall/: default-extensions.dhall  hlint.dhall  package.dhall  stylish-haskell.dhall
dhall/hlint/: functions.dhall  rule.dhall
src/: Main.hs
src/Gamgee/: Command.hs  CommandLine.hs  Crypto.hs  Effects.hs  OTP.hs  Operation.hs  Token.hs  Util.hs
src/Gamgee/Effects/: ByteStore.hs  Crypto.hs  CryptoRandom.hs  Error.hs  JSONStore.hs  SecretInput.hs  TOTP.hs
test/: Main.hs
test/Gamgee/Test/: Effects.hs  Golden.hs  Operation.hs  Property.hs
test/data/golden/: getOTPTest.txt
tools/: install-ghr.sh  install.sh
