name:           gamgee
version:        1.0.0
synopsis:       Tool for generating TOTP MFA tokens.
description:    Tool for generating TOTP MFA tokens. Please see the README on GitHub at <https://github.com/rkaippully/gamgee#readme>
category:       Authentication, Command Line
homepage:       https://github.com/rkaippully/gamgee#readme
bug-reports:    https://github.com/rkaippully/gamgee/issues
author:         Raghu Kaippully
maintainer:     rkaippully@gmail.com
copyright:      2018 Raghu Kaippully
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/rkaippully/gamgee

executable gamgee
  hs-source-dirs: app
  main-is: Main.hs
  other-modules: Gamgee.Program.CommandLine
                 Gamgee.Program.Effects
                 Paths_gamgee
  build-depends: gamgee -any
               , base >=4.12.0.0 && <4.13
               , relude >=0.5.0 && <0.6
               , optparse-applicative >=0.14.3.0 && <0.15
               , polysemy >=0.5.0.1 && <0.6
               , polysemy-plugin >=0.2.1.1 && <0.3
               , safe-exceptions >=0.1.7.0 && <0.2
               , directory >=1.3.3.0 && <1.4
               , filepath >=1.4.2.1 && <1.5
               , aeson >=1.4.4.0 && <1.5
               , unix >=2.7.2.2 && <2.8
               , text >=1.2.3.1 && <1.3
               , time >=1.8.0.2 && <1.9
               , Hclip >=3.0.0.4 && <3.1
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-record-updates
               -Wincomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N -fplugin=Polysemy.Plugin
  default-language: Haskell2010

library
  hs-source-dirs: src
  exposed-modules: Gamgee.Operation
                   Gamgee.Token
                   Gamgee.Effects
                   Gamgee.Effects.Error
                   Gamgee.Effects.Crypto
                   Gamgee.Effects.CryptoRandom
                   Gamgee.Effects.SecretInput
                   Gamgee.Effects.TOTP
                   Gamgee.Effects.JSONStore
                   Gamgee.Effects.ByteStore
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-record-updates
               -Wincomplete-uni-patterns -fplugin=Polysemy.Plugin
  build-depends: aeson >=1.4.4.0 && <1.5
               , base >=4.12.0.0 && <4.13
               , relude >=0.5.0 && <0.6
               , base64-bytestring >=1.0.0.2 && <1.1
               , bytestring >=0.10.8.2 && <0.11
               , cryptonite ==0.25.*
               , text >=1.2.3.1 && <1.3
               , memory >=0.14.18 && <0.15
               , time >=1.8.0.2 && <1.9
               , safe-exceptions >=0.1.7.0 && <0.2
               , polysemy >=0.5.0.1 && <0.6
               , polysemy-plugin >=0.2.1.1 && <0.3
  default-language: Haskell2010

test-suite gamgee-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Gamgee.Test.Property
                 Gamgee.Test.Effects
                 Gamgee.Test.Operation
                 Gamgee.Test.Golden
  build-depends: gamgee -any
               , base >=4.12.0.0 && <4.13
               , relude >=0.5.0 && <0.6
               , text >=1.2.3.1 && <1.3
               , bytestring>=0.10.8.2 && <0.11
               , memory >=0.14.18 && <0.15
               , aeson >=1.4.4.0 && <1.5
               , tasty >=1.2.3 && <1.3
               , tasty-golden >=2.3.2 && <2.4
               , tasty-quickcheck >=0.10.1 && <0.11
               , QuickCheck >=2.13.1 && <2.14
               , quickcheck-instances >=0.3.21 && <0.4
               , polysemy >=0.5.0.1 && <0.6
               , polysemy-plugin >=0.2.1.1 && <0.3
               , filepath >=1.4.2.1 && <1.5
               , cryptonite ==0.25.*
               , time >=1.8.0.2 && <1.9
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-record-updates
               -Wincomplete-uni-patterns -fplugin=Polysemy.Plugin
  default-language: Haskell2010
