cabal-version: 1.12

name:           gamgee
version:        1.2.2
synopsis:       Tool for generating TOTP MFA tokens.
description:    Tool for generating TOTP MFA tokens. Please see the README on GitHub at <https://github.com/rkaippully/gamgee#readme>
category:       Authentication, Command Line
homepage:       https://github.com/rkaippully/gamgee#readme
bug-reports:    https://github.com/rkaippully/gamgee/issues
author:         Raghu Kaippully
maintainer:     rkaippully@gmail.com
copyright:      2018-2021 Raghu Kaippully, Alexander Shestakov
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md
    test/data/golden/getOTPTest.txt

source-repository head
  type: git
  location: https://github.com/rkaippully/gamgee

library
  exposed-modules:
      Gamgee.Operation
      Gamgee.Token
      Gamgee.Effects
      Gamgee.Effects.Error
      Gamgee.Effects.Crypto
      Gamgee.Effects.CryptoRandom
      Gamgee.Effects.SecretInput
      Gamgee.Effects.TOTP
      Gamgee.Effects.JSONStore
      Gamgee.Effects.ByteStore
  other-modules:
      Paths_gamgee
  hs-source-dirs:
      src
  default-extensions: ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude OverloadedStrings PatternSynonyms PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-record-updates -Wincomplete-uni-patterns
  build-depends:
      aeson >=2
    , base
    , base64-bytestring
    , bytestring
    , cryptonite
    , memory
    , polysemy
    , relude
    , safe-exceptions
    , text
    , time
  default-language: Haskell2010

executable gamgee
  main-is: Main.hs
  other-modules:
      Gamgee.Program.CommandLine
      Gamgee.Program.Effects
      Paths_gamgee
  hs-source-dirs:
      app
  default-extensions: ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude OverloadedStrings PatternSynonyms PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-record-updates -Wincomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Hclip
    , aeson >=2
    , base
    , directory
    , filepath
    , gamgee
    , optparse-applicative
    , polysemy
    , relude
    , safe-exceptions
    , text
    , time
    , unix
  default-language: Haskell2010

test-suite gamgee-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Gamgee.Test.Effects
      Gamgee.Test.Golden
      Gamgee.Test.Operation
      Gamgee.Test.Property
      Paths_gamgee
  hs-source-dirs:
      test
  default-extensions: ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude OverloadedStrings PatternSynonyms PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-record-updates -Wincomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , aeson >=2
    , base
    , bytestring
    , cryptonite
    , filepath
    , gamgee
    , memory
    , polysemy
    , quickcheck-instances
    , relude
    , tasty
    , tasty-golden
    , tasty-quickcheck
    , text
    , time
  default-language: Haskell2010
